--- a/index.html
+++ b/index.html
@@ -1,13 +1,15 @@
 <!DOCTYPE html>
-<html lang="ru_UA">
+<html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-	<title>test</title>
+	<title>SpeechDetection</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="script.js"></script>
 </head>
 <body>
-	
+	<div class="words" contenteditable="">
+		
+	</div>
 </body>
 </html>
