--- a/index.html
+++ b/index.html
@@ -4,12 +4,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<title>SpeechDetection</title>
-	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+	<link rel="stylesheet" href="style.css">	
 </head>
 <body>
-	<div class="words" contenteditable="">
-		
-	</div>
+	<div class="words" contenteditable=""></div>
+	<script src="script.js"></script>
 </body>
 </html>
